// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaCard should render a custom cta element 1`] = `
<body>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-10 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
    >
      <div
        class="sc-gsTCUz hMCroH"
      >
        <img
          alt=""
          height="193"
          src="https://placekeanu.com/318/159/g"
          width="386"
        />
        <div
          class="sc-dlfnbm dVghKd"
        >
          <h4
            style="color: rgb(0, 239, 225);"
          >
            Canvas
          </h4>
          <p>
            this is information about gradleaders
          </p>
          <a
            href="https://google.com"
            title="Search Google"
          >
            Google
          </a>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MediaCard should render a custom image element 1`] = `
<body>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-10 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
    >
      <div
        class="sc-gsTCUz hMCroH"
      >
        <img
          alt=""
          role="presentation"
          src="https://placekeanu.com/318/159/g"
        />
        <div
          class="sc-dlfnbm dVghKd"
        >
          <h4
            style="color: rgb(0, 239, 225);"
          >
            Canvas
          </h4>
          <p>
            this is information about gradleaders
          </p>
          <button
            class="sc-bdfBwQ jEFczo"
          >
            View Gradleaders
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MediaCard should render children 1`] = `
<body>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-10 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
    >
      <div
        class="sc-gsTCUz hMCroH"
      >
        <img
          alt=""
          height="193"
          src="https://placekeanu.com/318/159/g"
          width="386"
        />
        <div
          class="sc-dlfnbm dVghKd"
        >
          <h4
            style="color: rgb(0, 239, 225);"
          >
            Canvas
          </h4>
          <p>
            this is information about gradleaders
          </p>
          <button
            class="sc-bdfBwQ jEFczo"
          >
            View Gradleaders
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
